<resources>
    <string name="app_name">BottomSheetMenu</string>
    <string name="action_settings">Settings</string>
    <string name="intro">Click on the menu icon to inflate menu.</string>
    <string name="change_icons">Change Icons</string>
    <string name="revert_icons">Revert Icon</string>
    <string name="change_text_color">Change text color</string>
    <string name="revert_icons_color">Revert Icon Color</string>
    <string name="change_icon_color">Change icon color</string>
    <string name="revert_text_to_default">Revert text color</string>
    <string name="hide_even">Hide even</string>
    <string name="show_even">Show even</string>
    <string name="show_odd">Show Odds</string>
    <string name="hide_odd">Hide Odds</string>
    <string name="show_icons">Show Icons</string>
    <string name="hide_icons">Hide Icons</string>

    <string name="option_one">Option One</string>
    <string name="option_two">Option Two</string>
    <string name="option_three">Option Three</string>
    <string name="option_four">Option Four</string>
    <string name="option_five">Option Five</string>
    <string name="option_six">Option Six</string>
    <string name="option_seven">Option Seven</string>
    <string name="option_eight">Option Eight</string>
    <string name="close">Close</string>

</resources>
