<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/activity_home">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/intro"
        android:textAllCaps="true"
        android:textSize="22dp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button_hide_icon"
        style="@style/MaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hide_icons" />

    <Button
        android:id="@+id/button_change_icon"
        style="@style/MaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/change_icons" />

    <Button
        android:id="@+id/button_change_icon_color"
        style="@style/MaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/change_icon_color" />

    <Button
        android:id="@+id/button_change_text_color"
        style="@style/MaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/change_text_color" />

    <Button
        android:id="@+id/button_hide_even"
        style="@style/MaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hide_even" />

    <Button
        android:id="@+id/button_hide_odd"
        style="@style/MaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hide_odd" />


</LinearLayout>